# AA.md2vid

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  docker-compose.yml  package-lock.json  package.json  tsconfig.json
characters/: yaranai.json  yaruo.json
input/manuscripts/: _template.md
mcp-server/: Dockerfile  README.md  pyproject.toml
mcp-server/src/aa_md2vid_mcp/: __init__.py  docker.py  server.py  tools.py
scripts/: generate-voices.ts  parse-markdown.ts  parse-mlt.ts  parse-slides.ts  preprocess.ts
src/: Root.tsx  Video.tsx  config.ts  fonts.ts  types.ts
src/aa/: builder.ts  characters.ts  emotions.ts
src/components/: AACharacter.tsx  DisplayPanel.tsx  Scene.tsx  Subtitle.tsx
