[project]
name = "aa-md2vid-mcp"
version = "0.1.0"
description = "MCP Server for AA.md2vid - Generate Yaruo/Yaranai videos from Markdown"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
aa-md2vid-mcp = "aa_md2vid_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aa_md2vid_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
